--- a/style.css
+++ b/style.css
@@ -12,3 +12,58 @@ body
      text-decoration: none;
      color:white;
  }
+  .check-sign-color
+  {
+      color: #5243C2;
+      background-color:rgba(82, 67, 194, 0.103693);
+      border-radius: 50%;
+  }
+  .choose-plan
+  {
+    text-decoration: none;
+    color: #3F87F5;
+    font-size: 15px;
+     font-weight: bold;
+     background-color:#F496D1;;
+     border-radius: 40px;
+     padding:10px 70px;
+     mix-blend-mode: normal;
+    opacity: 0.5;
+  }
+  .choose-plan-third
+  {
+    text-decoration: none;
+    color: #3F87F5;
+    font-size: 15px;
+     font-weight: bold;
+     background-color:white;
+     border-radius: 40px;
+     padding:10px 70px;
+     
+  }
+  .package-third-card
+  {
+      background-color:#3F87F5 ;
+      border-radius: 26px;
+      color: white;
+      position: relative;
+    }
+    .excited-option
+    {
+        background-color: red;
+        text-align: center;
+        font-size: 14px;
+        color: #FFFFFF;
+        padding:2px 0px;
+        border-radius:200px;
+        width: 35px;
+        position: absolute;
+        top:-10px;
+        right:20px;
+    }
+    .check-sign-third-card
+    {
+        color: white;
+        background-color:rgba(82, 67, 194, 0.103693);
+        border-radius: 50%;
+    }
